// Copyright (c) 2020 The DAML Authors. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// The DAML Ledger configuration. Please refer to the spec
// (ledger/participant-state/protobuf/ledger_configuration.rst)
// for detailed information on versions and semantics.
//
// version summary:
// * 1: initial version
// * 2: added new fields for the new ledger time model
//

syntax = "proto3";
package com.daml.ledger.participant.state;
option java_package = "com.daml.ledger.participant.state.protobuf";
option java_multiple_files = true;
option csharp_namespace = "Com.Daml.Ledger.Participant.State.Protobuf";

import "google/protobuf/duration.proto";

message LedgerConfiguration {
  // The version of the configuration message. Defines the semantics
  // of how it is decoded and interpreted.
  int64 version = 1;

  // The configuration generation. If submitting a configuration the new generation
  // must be one larger than previous configuration. This safe-guards against
  // configuration changes that are based upon stale data.
  int64 generation = 2;

  // The ledger time model, specifying the bounds for
  // ledger effective time and maximum record time of transactions.
  LedgerTimeModel time_model = 3;
}

message LedgerTimeModel {
  // The expected minimum latency of a transaction.
  google.protobuf.Duration min_transaction_latency = 1;

  // The maximum allowed clock skew between the ledger and clients.
  google.protobuf.Duration max_clock_skew = 2;

  // The maximum allowed time to live for a transaction.
  // Must be greater than the derived minimum time to live.
  google.protobuf.Duration max_ttl = 3;

  // The expected average latency of a transaction, i.e., the average time
  // from submitting the transaction to a WriteService and the transaction
  // being assigned a record time.
  google.protobuf.Duration avg_transaction_latency = 4;

  // The minimimum skew between ledger time and record time: lt_TX >= rt_TX - minSkew
  google.protobuf.Duration min_skew = 5;

  // The maximum skew between ledger time and record time: lt_TX <= rt_TX + maxSkew
  google.protobuf.Duration max_skew = 6;
}
